add base64 decoder + write images to disk when a new observation is created
